--- a/src/App.css
+++ b/src/App.css
@@ -1,31 +1,12 @@
-.App {
-  text-align: center;
+/* font family */
+@font-face {
+  font-family: 'LucidaHandwritingItalic'; /* Replace with the desired font name */
+  src: url('./assets/fonts/LucidaHandwritingItalic.ttf') format('truetype'); /* Adjust the path and format accordingly */
+  /* You can also specify font-weight and font-style if needed */
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
+.logo-text {
+  font-family: 'LucidaHandwritingItalic', sans-serif;
 }
 
 .navbar {
@@ -39,7 +20,7 @@
 }
 
 .landing-page {
-  background-image: url('./assets/landing.jpg'); /* Replace '../assets/background.jpg' with the correct path to your image */
+  background-image: url('./assets/images/landing.jpg'); /* Replace '../assets/background.jpg' with the correct path to your image */
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
@@ -63,8 +44,6 @@
 
 .services-title {
   position: relative;
-  /* top: 80px; */
-  z-index: 99999;
 }
 
 .pricing-section {
@@ -172,6 +151,12 @@
 
   .contact-us-row {
     display: block !important;
+  }
+}
+
+@media (max-width: 720px) {
+  .img-service {
+    height: 400px;
   }
 }
 @media (min-width: 768px) {
